# audi_code_challenge

./: .gitignore  LogfileExample.txt  Readme.txt
Client/: CMakeLists.txt
Client/inc/: DataLogger.h  IFusionInterface.h  ISensorInterface.h
Client/src/: DataLogger.cpp  FusionInterface.cpp  SensorInterface.cpp  main.cpp
Server/: CMakeLists.txt
Server/src/: SensorServer.cpp
inc/: Definitions.h
